--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* > * {
+  font-family: 'Poppins', sans-serif;
+}
 
 .input-text {
   @apply block w-60 mt-1 px-3 py-2 bg-white border border-slate-300 rounded-full text-sm shadow-sm placeholder-slate-500;
