--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,7 @@
   @apply block w-60 mt-1 px-3 py-2 bg-white border border-slate-300 rounded-full text-sm shadow-sm placeholder-slate-500;
   @apply focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500;
 }
+
+.title {
+  @apply font-bold text-4xl py-12 text-center
+}
